# shady-graphics

./: .gitignore  shady-graphics.cabal
src/Shady/: Color.hs  CompileEffect.hs  CompileImage.hs  CompileImageSimple.hs  CompileSurface.hs  Examples.hs  ITransform.hs  Image.hs  Lighting.hs  ParamSurf.hs
src/Shady/CompileEffect/: Json.hs
