Name:                shady-graphics
Version:             0.6.1
Cabal-Version:       >= 1.6
Synopsis:            Functional GPU programming - graphics
Category:            Graphics
Description:
  Graphics types for Shady, for GPU execution
  See also shady-gen, shady-render, shady-tv, and shady-examples
  .
  Copyright 2009-2012 by Conal Elliott; GNU AGPLv3 license (see COPYING).
  This license is a place-holder.  Let me know if you'd like other terms.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Homepage:            http://github.com/conal/shady-graphics/
Copyright:           (c) by Conal Elliott 2009-2012
License:             OtherLicense
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Source-Repository head
    type:         git
    location:     git://github.com/conal/shady-graphics.git

Library
  hs-Source-Dirs:      src

  Build-Depends:       Boolean
                     , MemoTrie
                     , NumInstances >= 1.4
                     , TypeCompose >= 0.7
                     , applicative-numbers>=0.0.4
                     , base >=4 && < 5
                     , containers
                     , data-treify
                     , directory >= 1.2.6.2
                     , mtl
                     , shady-gen
                     , ty
                     , type-unary
                     , vector-space>=0.5.6
                     , wl-pprint
  Exposed-Modules:
                        Shady.ITransform
                        Shady.Color
                        Shady.Image
                        Shady.ParamSurf
                        Shady.Lighting
                        Shady.CompileSurface
                        Shady.CompileImage


